# bds-lite

./: .gitignore  CITATION.cff  DATASETS.md  LICENSE  README.md  RELEASE_INVENTORY.md  REPRODUCIBILITY.md  THIRD_PARTY_NOTICES.md  ZENODO_MANIFEST.csv  environment.yml  pyproject.toml  reproduce.sh  requirements.txt
analysis/: README.md  generate_rescue_analysis.py
analysis/inputs/: p1b_gate_comparison_summary.csv
analysis/notes/: deployment_value_analysis.md  failure_case_analysis.md  gsl_comparison_audit.md  per_case_analysis.md  statistical_robustness_audit.md  subgroup_analysis.md
audit/: AUDIT.md  STAGE2_PROPOSAL.md
configs/: base.yaml
configs/datasets/: acdc.yaml  isic2018.yaml  synapse.yaml
configs/gsl/: phase16_matched_gsl_acdc_seed1.yaml  phase16_matched_gsl_acdc_seed2.yaml  phase16_matched_gsl_acdc_seed3.yaml  phase16_matched_gsl_isic2018_seed1.yaml  (+5 more)
docs/: compute.md  config_of_record.md  data_access.md  mechanism.md  naming.md  paper_mapping.md  provenance_crosswalk.md  statistics.md  traceability.md  zenodo.md
figures/: captions.md
manuscript/: BDS_Lite_PeerJ_manuscript.docx  BDS_Lite_submission_candidate_v1.md  Figure captions.md  human_tasks_before_submission.md  integration_audit.md  tables.docx
results/: README.md  main_test_means.csv  matched_gsl_seed_results.csv  matched_gsl_summary.csv  resource_profile_isic2018_comparison.csv  seed_level_wilcoxon_summary.csv
scripts/: convert_acdc.py  convert_isic2018.py  convert_synapse.py  evaluate.py  prepare_boundary_targets.py  profile_model.py  reeval_main_seeds.py  train.py
(+117 files in other folders)
