[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bds-lite"
version = "0.1.0"
description = "Boundary-distilled lightweight 2D medical image segmentation research scaffold"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "einops>=0.7",
  "numpy>=1.24",
  "pandas>=2.0",
  "Pillow>=10.0",
  "PyYAML>=6.0",
  "scipy>=1.10",
  "scikit-image>=0.22",
  "torch>=2.4",
  "torchvision>=0.19",
  "tqdm>=4.66"
]

[project.optional-dependencies]
dev = [
  "pre-commit>=3.7",
  "pytest>=8.0",
  "ruff>=0.5"
]
data = [
  "h5py>=3.9",
  "nibabel>=5.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
